argocd-managed/cert-manager/templates/0scar-nl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-0scar-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: 0scar-nl-tls
    domains:
      - main: "0scar.nl"
      - sans: ["*.0scar.nl"]
