argocd-managed/cert-manager/templates/devopscar-nl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-devopscar-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: devopscar-nl-tls
    domains:
      - main: "devopscar.nl"
      - sans: ["*.devopscar.nl"]
