argocd-managed/cert-manager/templates/lab-oscarr-nl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-lab-oscarr-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: lab-oscarr-nl-tls
    domains:
      - main: "lab.oscarr.nl"
      - sans: ["*.lab.oscarr.nl"]
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: TLSStore
# metadata:
#   name: default
# spec:
#   defaultCertificate:
#     secretName: lab-oscarr-nl-tls
