argocd-managed/cert-manager/templates/ninoo-nl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-ninoo-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: ninoo-nl-tls
    domains:
      - main: "ninoo.nl"
      - sans: ["*.ninoo.nl"]
