argocd-managed/cert-manager/templates/oscarr-nl.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-lab-oscarr-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: lab-oscarr-nl-tls
    domains:
      - main: "lab.oscarr.nl"
      - sans: ["*.lab.oscarr.nl"]
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-oscarr-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: oscarr-nl-tls
    domains:
      - main: "oscarr.nl"
      - sans: ["*.oscarr.nl"]
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-0scar-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: 0scar-nl-tls
    domains:
      - main: "0scar.nl"
      - sans: ["*.0scar.nl"]
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-devopscar-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: devopscar-nl-tls
    domains:
      - main: "devopscar.nl"
      - sans: ["*.devopscar.nl"]
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-ninoo-nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fake`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
  tls:
    secretName: ninoo-nl-tls
    domains:
      - main: "ninoo.nl"
      - sans: ["*.ninoo.nl"]
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: TLSStore
# metadata:
#   name: default
# spec:
#   defaultCertificate:
#     secretName: lab-oscarr-nl-tls
